dataset1235/2025-2/1153765216/users/1452895412/executions/2052804200_359761547.log
== SUBMISSION (2025-09-02 19:20:03)
-- CODE: 
idade + int(input(print("Isira sua idade: ")))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade + int(input(print("Isira sua idade: ")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade + int(input(print("Isira sua idade: ")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade + int(input(print("Isira sua idade: ")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade + int(input(print("Isira sua idade: ")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade + int(input(print("Isira sua idade: ")))
    ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade + int(input(print("Isira sua idade: ")))
    ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:20:19)
-- CODE: 
idade = int(input(print("Isira sua idade: ")))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Nonepaga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Nonenao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Nonenao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Nonepaga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Nonepaga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Nonepaga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
